# gcp-data-trasformation

./: .gitignore  README.md  pyproject.toml
scripts/: 00-config.ps1  01-enable-apis.ps1  02-create-bigquery.ps1  03-create-pubsub.ps1  04-deploy-function.ps1  05-grant-publisher.ps1  06-test-publish.ps1
scripts/schemas/: products.json  products_latest_view.sql  products_raw.json
src/: bq_writer.py  main.py  requirements.txt  transform.py
tests/: test_transform.py
